--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-spring-plugin</artifactId>
-			<version>2.3.16</version>
+			<artifactId>struts2-json-plugin</artifactId>
+			<version>2.3.20</version>
 		</dependency>
 		<!-- hibernate -->
 		<dependency>
@@ -44,6 +44,18 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 			<type>zip</type>
+		</dependency>
+		<!-- json -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.5</version>
+		</dependency>
+		<!-- 常用加密解密算法 -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.10</version>
 		</dependency>
 	</dependencies>
 	<build>
