--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,14 @@
 		</dependency>
 		<!-- 添加Log4J依赖 -->
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.2</version>
 		</dependency>
 		<!-- json -->
 		<dependency>
